[package]
name = "shm-bench"
version = "0.1.0"
edition = "2024"

[features]
default = ["validate"]
validate = []

[dependencies]
anyhow = "1.0"
arrow-array = "54.3"
bon = "3.6"
core_affinity = "0.8"
crossbeam-channel = "0.5"
hdrhistogram = "7.5"
libc = "0.2"
log = "0.4"
parquet = { version = "54.3", features = ["arrow"] }
rand = "0.9"
rapidhash = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shm = { git = "https://github.com/nwtnni/shm.git", features = ["serde"] }
ycsb = { git = "https://github.com/nwtnni/ycsb.git", features = ["serde"] }
